force-app/main/default/objects/List_Service_Price__c/List_Service_Price__c.object-meta.xml
<CustomObject>
    <description>this is the template for all kind of services</description>
    <label>List Service Price</label>
    <nameField>
        <label>List Service Price Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>List Services Price</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>