force-app/main/default/objects/List_Service_Price__c/fields/Archived__c.field-meta.xml
<CustomField>
    <fullName>Archived__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is create to Archived Tarf and doesn&apos;t show it on the SMC</description>
    <label>Archived</label>
    <type>Checkbox</type>
</CustomField>