force-app/main/default/objects/List_Service_Price__c/fields/Based_On__c.field-meta.xml
<CustomField>
    <fullName>Based_On__c</fullName>
    <label>Based On</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Orders</fullName>
            </value>
            <value>
                <fullName>Monetary Amounts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>