force-app/main/default/objects/List_Service_Price__c/fields/Commission_Type__c.field-meta.xml
<CustomField>
    <fullName>Commission_Type__c</fullName>
    <description>this is commission Type</description>
    <label>Commission Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Percentage</fullName>
                <default>true</default>
                <label>Percentage</label>
            </value>
            <value>
                <fullName>Per Order</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>