force-app/main/default/objects/List_Service_Price__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Company to which this service is tied</description>
    <label>User Company</label>
    <referenceTo>Company__c</referenceTo>
    <relationshipLabel>List Services Price</relationshipLabel>
    <relationshipName>List_Services_Price</relationshipName>
    <type>Lookup</type>
</CustomField>