force-app/main/default/objects/List_Service_Price__c/fields/Default_Commission_In_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Default_Commission_In_Percentage__c</fullName>
    <description>this gives the default value</description>
    <label>Default Commission In Percentage</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>