force-app/main/default/objects/List_Service_Price__c/fields/Displayed_Name__c.field-meta.xml
<CustomField>
    <fullName>Displayed_Name__c</fullName>
    <label>Displayed Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>