force-app/main/default/objects/List_Service_Price__c/fields/Id_Asset__c.field-meta.xml
<CustomField>
    <fullName>Id_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>this shows if this service is also a asset</description>
    <label>Asset</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>List Services Price</relationshipLabel>
    <relationshipName>List_Services_Price</relationshipName>
    <type>Lookup</type>
</CustomField>