force-app/main/default/objects/List_Service_Price__c/fields/Id_Country__c.field-meta.xml
<CustomField>
    <fullName>Id_Country__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>holds the country of the record</description>
    <label>User Country</label>
    <referenceTo>Country__c</referenceTo>
    <relationshipLabel>List Services Price</relationshipLabel>
    <relationshipName>List_Services_Price</relationshipName>
    <type>Lookup</type>
</CustomField>