force-app/main/default/objects/List_Service_Price__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this shows if this is enable</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>