force-app/main/default/objects/List_Service_Price__c/fields/Maximum_Commission_In_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Commission_In_Percentage__c</fullName>
    <description>this is the maximum</description>
    <label>Maximum Commission In Percentage</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>