force-app/main/default/objects/List_Service_Price__c/fields/Maximum_Commission_Per_Order__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Commission_Per_Order__c</fullName>
    <label>Maximum Commission Per Order</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>