force-app/main/default/objects/List_Service_Price__c/fields/Minimum_Commission_in_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Commission_in_Percentage__c</fullName>
    <description>this gives the minimum</description>
    <label>Minimum Commission in Percentage</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>