force-app/main/default/objects/List_Service_Price__c/fields/Recurring_Fee__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Fee__c</fullName>
    <description>this is the sum for a recurring fee</description>
    <label>Recurring Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>