force-app/main/default/objects/List_Service_Price__c/fields/Recurring_Interval__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Interval__c</fullName>
    <description>this gives the interval of a recurring fee</description>
    <label>Recurring Interval</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>