force-app/main/default/objects/List_Service_Price__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commission Fee</fullName>
            </value>
            <value>
                <fullName>Online Payment Fee</fullName>
            </value>
            <value>
                <fullName>White Label Website Fee</fullName>
            </value>
            <value>
                <fullName>White Label Commission Fee</fullName>
            </value>
            <value>
                <fullName>Logistics Fee</fullName>
            </value>
            <value>
                <fullName>Credit Card Payment Fee</fullName>
            </value>
            <value>
                <fullName>Debit Card Payment Fee</fullName>
            </value>
            <value>
                <fullName>Take Away Commission Fee</fullName>
            </value>
            <value>
                <fullName>Delivery Fee</fullName>
            </value>
            <value>
                <fullName>SZÉP Card Payment Fee</fullName>
            </value>
            <value>
                <fullName>Bank Card Payment Fee</fullName>
            </value>
            <value>
                <fullName>Complementary Logistics Fee</fullName>
            </value>
            <value>
                <fullName>Courier Fee</fullName>
            </value>
            <value>
                <fullName>Complementary Commission Fee</fullName>
            </value>
            <value>
                <fullName>Additional Menu Fee</fullName>
            </value>
            <value>
                <fullName>Deal Subscription Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>