force-app/main/default/objects/List_Service_Price__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>this gives the type of service</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commission</fullName>
            </value>
            <value>
                <fullName>Recurring Fee</fullName>
            </value>
            <value>
                <fullName>Premium Placement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>