force-app/main/default/objects/List_Service_Price__c/recordTypes/AT_List_Service_Price.recordType-meta.xml
<RecordType>
    <fullName>AT_List_Service_Price</fullName>
    <active>true</active>
    <label>AT List Service Price</label>
</RecordType>