force-app/main/default/objects/List_Service_Price__c/recordTypes/CD_List_Service_Price.recordType-meta.xml
<RecordType>
    <fullName>CD_List_Service_Price</fullName>
    <active>true</active>
    <label>CD List Service Price</label>
</RecordType>