force-app/main/default/objects/List_Service_Price__c/recordTypes/CZ_List_Service_Price.recordType-meta.xml
<RecordType>
    <fullName>CZ_List_Service_Price</fullName>
    <active>true</active>
    <description>Czech Republic List Service Price</description>
    <label>CZ List Service Price</label>
</RecordType>