force-app/main/default/objects/List_Service_Price__c/recordTypes/DE_List_Service_Price.recordType-meta.xml
<RecordType>
    <fullName>DE_List_Service_Price</fullName>
    <active>true</active>
    <label>DE List Service Price</label>
</RecordType>