force-app/main/default/objects/List_Service_Price__c/recordTypes/DH_AU_List_Service_Price.recordType-meta.xml
<RecordType>
    <fullName>DH_AU_List_Service_Price</fullName>
    <active>true</active>
    <label>DH AU List Service Price</label>
</RecordType>