force-app/main/default/objects/List_Service_Price__c/recordTypes/FI_List_Service_Price.recordType-meta.xml
<RecordType>
    <fullName>FI_List_Service_Price</fullName>
    <active>true</active>
    <label>FI List Service Price</label>
</RecordType>