force-app/main/default/objects/List_Service_Price__c/recordTypes/FP_List_Service_Price.recordType-meta.xml
<RecordType>
    <fullName>FP_List_Service_Price</fullName>
    <active>true</active>
    <label>FP List Service Price</label>
</RecordType>