force-app/main/default/objects/List_Service_Price__c/recordTypes/HU_List_Service_Price.recordType-meta.xml
<RecordType>
    <fullName>HU_List_Service_Price</fullName>
    <active>true</active>
    <description>Hungary List Service Price</description>
    <label>HU List Service Price</label>
</RecordType>