force-app/main/default/objects/List_Service_Price__c/recordTypes/PY_List_Service_Price.recordType-meta.xml
<RecordType>
    <fullName>PY_List_Service_Price</fullName>
    <active>true</active>
    <description>Record type for Pedidos Ya and in future to be global for all countries</description>
    <label>PY List Service Price</label>
</RecordType>