force-app/main/default/objects/List_Service_Price__c/recordTypes/SE_List_Service_Price.recordType-meta.xml
<RecordType>
    <fullName>SE_List_Service_Price</fullName>
    <active>true</active>
    <label>SE List Service Price</label>
</RecordType>