force-app/main/default/objects/List_Service_Price__c/recordTypes/Talabat_List_Service_Price.recordType-meta.xml
<RecordType>
    <fullName>Talabat_List_Service_Price</fullName>
    <active>true</active>
    <label>Talabat List Service Price</label>
</RecordType>