force-app/main/default/objects/List_Service_Price__c/recordTypes/UK_List_Service_Price.recordType-meta.xml
<RecordType>
    <fullName>UK_List_Service_Price</fullName>
    <active>true</active>
    <label>UK List Service Price</label>
</RecordType>