force-app/main/default/objects/List_Service_Price__c/recordTypes/Yogiyo_List_Service_Price.recordType-meta.xml
<RecordType>
    <fullName>Yogiyo_List_Service_Price</fullName>
    <active>true</active>
    <label>Yogiyo List Service Price</label>
</RecordType>