force-app/main/default/objects/List_Service_Price__c/validationRules/Service_Name_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Name_Required</fullName>
    <active>true</active>
    <description>The service name is required</description>
    <errorConditionFormula>ISBLANK(Name)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Service Name is required</errorMessage>
</ValidationRule>