force-app/main/default/objects/List_Service_Price__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Displayed_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Is_Active__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>