force-app/main/default/objects/List_Service_Price__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Is_Active__c</columns>
    <columns>Commission_Type__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>Id_Country__c</columns>
    <columns>Company__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>List_Service_Price__c.FP_List_Service_Price</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>