force-app/main/default/objects/List_Service_Price__c/listViews/Germany.listView-meta.xml
<ListView>
    <fullName>Germany</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Is_Active__c</columns>
    <columns>Displayed_Name__c</columns>
    <columns>Default_Commission_In_Percentage__c</columns>
    <columns>Commission_In_Percentage__c</columns>
    <columns>Commission_Per_Order__c</columns>
    <columns>Service_Type__c</columns>
    <columns>Commission_Type__c</columns>
    <columns>Id_Country__c</columns>
    <columns>Company__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Id_Country__c</field>
        <operation>equals</operation>
        <value>germany</value>
    </filters>
    <label>Germany</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinates>Global_Admin</roleAndSubordinates>
    </sharedTo>
</ListView>